# krasnodar-back

./: .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  alembic.ini  dev.Dockerfile  docker-compose.yaml  pyproject.toml
app/: initializer.py  main.py
app/config/: __init__.py  _base.py  _custom.py  local.yaml.tmpl
app/internal/api/: router.py
app/internal/api/v1/: authentication.py  distribution.py  employee.py  input.py  manager.py  place.py  router.py  tasks.py
app/internal/api/v1/schemas/: common.py
app/internal/api/v1/schemas/request/: __init__.py  employee.py  manager.py  place.py  tasks.py
app/internal/api/v1/schemas/response/: __init__.py  authentication.py  employee.py  manager.py  place.py  tasks.py
app/internal/core/: exceptions.py  utils.py
app/internal/core/dependencies/: __init__.py  authentication.py  authorization.py
app/internal/core/logs/: helpers.py
app/internal/core/types/: __init__.py  celery.py  tasks.py  users.py  workers.py
app/internal/repositories/: geoapify.py  open_route_service.py  tomtom.py  yandex_geocoder.py
app/internal/repositories/db/: __init__.py  _session.py  base.py  celery.py  helpers.py  points.py  tasks.py  users.py
app/internal/repositories/db/migrations/: alembic.ini  env.py
app/internal/repositories/db/migrations/versions/: 062d640ba334_add_task_types.py  099acb689f76_init.py  (+3 more)
app/internal/repositories/db/models/: __init__.py  celery.py  point.py  task.py  user.py
app/internal/services/: distribution.py  input_data.py  point.py  task.py  user.py
app/internal/services/authentication/: authentication.py  helpers.py  jwt.py
app/internal/tasks/: __init__.py  distribution.py  input_data.py  models.py  points.py  tasks.py  worker.py
docs/: alembic.md  linters.md
